creusot/tests/should_fail/prusti/traits/homes.stderr
error[creusot]: `'x` must match the current time slice `'curr`
  --> homes.rs:11:5
   |
11 |     fn model(self) -> Y {
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

